# django-skeleton

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  dependencies.txt  mypy.ini  pyproject.toml  run-mypy
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: quality.yml
src/config/: settings.py  settings_celery.py  urls.py
src/core/: exceptions.py
src/static/css/: style.css
src/static/js/: script.js
src/templates/users/: index.html
src/tests/users/: test_api.py
src/users/: admin.py  models.py  serializer.py  tasks.py  urls.py  views.py
